--- a/package.json
+++ b/package.json
@@ -24,24 +24,25 @@
         "@testing-library/jest-dom": "^6.8.0",
         "@testing-library/react": "^16.3.0",
         "clsx": "^2.1.1",
+        "next": "15.5.2",
+        "openmeteo": "^1.2.0",
         "react": "19.1.0",
         "react-dom": "19.1.0",
-        "next": "15.5.2",
         "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
-        "typescript": "^5",
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
         "@testing-library/dom": "^10.4.1",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "@tailwindcss/postcss": "^4",
+        "eslint": "^9",
+        "eslint-config-next": "15.5.2",
         "jsdom": "^26.1.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "tailwindcss": "^4",
-        "eslint": "^9",
-        "eslint-config-next": "15.5.2",
-        "@eslint/eslintrc": "^3",
+        "typescript": "^5",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.2.4"
     }
