--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "openmeteo": "^1.2.0",
         "react": "19.1.0",
         "react-dom": "19.1.0",
-        "tailwind-merge": "^3.3.1"
+        "swr": "^2.3.6",
+        "tailwind-merge": "^3.3.1",
+        "zustand": "^5.0.8"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
