--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "next": "15.5.2",
         "openmeteo": "^1.2.0",
         "react": "19.1.0",
+        "react-circle-flags": "^0.0.23",
         "react-dom": "19.1.0",
         "swr": "^2.3.6",
         "tailwind-merge": "^3.3.1",
