--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@testing-library/jest-dom": "^6.8.0",
         "@testing-library/react": "^16.3.0",
         "clsx": "^2.1.1",
+        "lucide-react": "^0.544.0",
         "next": "15.5.2",
         "openmeteo": "^1.2.0",
         "react": "19.1.0",
