--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@radix-ui/react-select": "^2.2.6",
         "@testing-library/jest-dom": "^6.8.0",
         "@testing-library/react": "^16.3.0",
         "clsx": "^2.1.1",
